# Vantage

./: .gitignore  OPTIMIZATION_SUMMARY.md  README.md  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  package-lock.json  package.json
public/: index.html  model-test.html  model-view.html
public/css/: city.css  radar.css  style.css
public/data/: stars.json
public/js/: aircraft.js  airlines.js  assets.js  atc.js  ceiling-brush.js  city.js  classify.js  clouds.js  coords.js  dashboard.js  emergency.js  fisheye.js  flightboard.js  hotspots.js  main.js  meteors.js  navlights.js  plane-model.js  planets.js  radar.js  sat-worker.js  satellites.js  sky.js  stars.js  towers.js  ui.js
roku/: .gitignore  PUBLISHING.md  README.md  manifest
roku/components/: AircraftTask.brs  AircraftTask.xml  LocationTask.brs  LocationTask.xml  RadarScene.brs  RadarScene.xml  RadarView.brs  RadarView.xml  (+2 more)
scripts/: atc-probe.mjs  atc-stream-test.mjs  atc-v4.mjs  build-stars.mjs  city-probe.mjs  contract-smoke.mjs  gen-icon.mjs  projection-test.mjs  sgp4-testvector.mjs  three-loader.mjs  three-shim.mjs
server/: index.js
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  server.rs  static_assets.rs
src-tauri/src/proxy/: aircraft.rs  atc.rs  cameras.rs  flightinfo.rs  geolocate.rs  health.rs  incidents.rs  mod.rs  prefs.rs  tile.rs  tle.rs  weather.rs
src-tauri/src/proxy/sources/: arcgis.rs  cams.rs  gray.rs  hazards.rs  keyed.rs  la.rs  mod.rs  registry.rs  road.rs  socrata.rs
(+38 files in other folders)
